develop: refactor front finish
