# backend/handlers/api_verify_viewer.go
@@ -9,7 +9,7 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary      Get all jobs
+// @Summary      Get all job names
 // @Description  Returns a list of all job names
 // @Tags         jobs
 // @Produce      json
@@ -36,29 +36,27 @@ func (handle *Handle) GetJobs(c *gin.Context) {
 // @Failure      500  {object}  map[string]string
 // @Router       /api/setAllPages [post]
 func (handle *Handle) SetAllPageDetails(c *gin.Context) {
-	jobName := c.Query("job")
-	pageSize := c.Query("pageSize")
-	if jobName == "" || pageSize == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Missing job or pageSize parameter"})
+	type PageRequest struct {
+		Job      string `json:"job" binding:"required"`
+		PageSize int    `json:"pageSize" binding:"required,gt=0"`
+	}
+
+	var req PageRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid input: 'job' must be string, 'pageSize' must be a positive integer."})
 		return
 	}
 
-	pageSizeInt, err := strconv.Atoi(pageSize)
-	if err != nil || pageSizeInt <= 0 {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid pageSize parameter"})
-		return
-	}
+	log.Printf("SetAllPageDetails called with job: %s and pageSize: %d", req.Job, req.PageSize)
 
-	if !handle.UserServices.CurrentPageDataExists(jobName) {
-		handle.UserServices.CacheManager.ClearImageCacheStore(jobName)
+	if !handle.UserServices.CurrentPageDataExists(req.Job) {
+		handle.UserServices.CacheManager.ClearImageCacheStore(req.Job)
 		handle.UserServices.ClearCurrentPageData()
-		handle.UserServices.SetCurrentPageData(jobName, pageSizeInt)
+		handle.UserServices.SetCurrentPageData(req.Job, req.PageSize)
 	}
 
 	c.JSON(http.StatusOK, gin.H{
-		"message":   "All pages set successfully for job: " + jobName,
-		"job":       jobName,
-		"page_size": pageSizeInt,
+		"message": "All pages set successfully for job: " + req.Job,
 	})
 }
 
@@ -96,9 +94,9 @@ func (handle *Handle) GetAllPageDetails(c *gin.Context) {
 	})
 }
 
-// @Summary      Get all images for a job
+// @Summary      Get base64image by page index
 // @Description  Returns all base64 encoded images for a specific page of a job
-// @Tags         base64images
+// @Tags         images
 // @Produce      json
 // @Param        job  query  string  true  "Job name"
 // @Param        dataset  query  string  true  "Dataset name"
@@ -106,13 +104,12 @@ func (handle *Handle) GetAllPageDetails(c *gin.Context) {
 // @Failure      400  {object}  map[string]string
 // @Failure      404  {object}  map[string]string
 // @Failure      500  {object}  map[string]string
-// @Router       /api/getImages [get]
+// @Router       /api/getBase64ImageSet [get]
 func (handle *Handle) GetBase64ImageByPageIndex(c *gin.Context) {
 	jobName := c.Query("job")
-	datasetName := c.Query("dataset")
-	pageIndex := c.Query("imageIndex")
+	pageIndex := c.Query("pageIndex")
 
-	if jobName == "" || datasetName == "" || pageIndex == "" {
+	if jobName == "" || pageIndex == "" {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Missing job, dataset or imageIndex parameter"})
 		return
 	}
@@ -123,7 +120,7 @@ func (handle *Handle) GetBase64ImageByPageIndex(c *gin.Context) {
 		return
 	}
 
-	if handle.UserServices.ImageCacheExists(jobName) {
+	if handle.UserServices.ImageCacheExists(jobName, index) {
 		imagePaths, base64Images := handle.UserServices.GetBase64ImageCacheByPage(jobName, index)
 		if len(imagePaths) == 0 || len(base64Images) == 0 {
 			c.JSON(http.StatusNotFound, gin.H{"error": "No images found for the specified page"})
@@ -131,19 +128,96 @@ func (handle *Handle) GetBase64ImageByPageIndex(c *gin.Context) {
 		}
 
 		c.JSON(http.StatusOK, gin.H{
+			"image_path":   imagePaths,
 			"base64_image": base64Images,
 		})
+		return
 	}
 
 	imagePaths, base64Images := handle.UserServices.SetBase64ImageCacheByPage(jobName, index)
+	log.Println("SetBase64ImageByPageIndex called with job:", jobName, "and pageIndex:", pageIndex)
 	if len(imagePaths) == 0 || len(base64Images) == 0 {
 		c.JSON(http.StatusNotFound, gin.H{"error": "No images found for the specified page"})
 		return
 	}
 	c.JSON(http.StatusOK, gin.H{
+		"image_path":   imagePaths,
 		"base64_image": base64Images,
 	})
 
+}
+
+// @Summary      Get base64 image by image path
+// @Description  Returns a base64 encoded image for a specific image path in a job
+// @Tags         images
+// @Produce      json
+// @Param        job  query  string  true  "Job name"
+// @Param        imagePath  query  string  true  "Image path"
+// @Success      200  {object}  map[string]interface{}
+// @Failure      400  {object}  map[string]string
+// @Failure      404  {object}  map[string]string
+// @Failure      500  {object}  map[string]string
+// @Router       /api/getBase64Image [get]
+func (Handle *Handle) GetBase64ImageByImagePath(c *gin.Context) {
+	jobName := c.Query("job")
+	imagePath := c.Query("imagePath")
+	if jobName == "" || imagePath == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Missing imagePath parameter"})
+		return
+	}
+
+	base64Image := Handle.UserServices.GetBase64ImageByPath(jobName, imagePath)
+	if base64Image == "" {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Image not found"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"base64_image": base64Image,
+	})
+
+}
+
+// @Summary      Get image by page index
+// @Description  Returns image names and paths for a specific page of a job
+// @Tags         images
+// @Produce      json
+// @Param        job  query  string  true  "Job name"
+// @Param        pageIndex  query  string  true  "Page index"
+// @Success      200  {object}  map[string]interface{}
+// @Failure      400  {object}  map[string]string
+// @Failure      404  {object}  map[string]string
+// @Failure      500  {object}  map[string]string
+// @Router       /api/getImageSet [get]
+func (handle *Handle) GetImageByPageIndex(c *gin.Context) {
+	jobName := c.Query("job")
+	pageIndex := c.Query("pageIndex")
+
+	if jobName == "" || pageIndex == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Missing job or pageIndex parameter"})
+		return
+	}
+
+	index, err := strconv.Atoi(pageIndex)
+	if err != nil || index < 0 {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid pageIndex parameter"})
+		return
+	}
+
+	if !handle.UserServices.CurrentPageDataExists(jobName) {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Image cache not found for the specified job"})
+	}
+
+	imageNames, imagePaths := handle.UserServices.GetImageCacheByPage(jobName, index)
+	if len(imageNames) == 0 && len(imagePaths) == 0 {
+		c.JSON(http.StatusNotFound, gin.H{"error": "No images found for the specified page"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"image_name": imageNames,
+		"image_path": imagePaths,
+	})
 }
 
 // @Summary      Save pending review
